# Nitetrichor

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  readme.md
cmake/modules/: Nitetrichor.cmake
include/Nitetrichor/Core/: Basic.h  Casting.hpp  ExtensibleRTTI.hpp  Log.h  MathUtilities.h  Notification.hpp  UUID.hpp  Version.inc.in  coroutine.h  type_traits.hpp
include/Nitetrichor/LearnKit/: ACAutomaton.hpp  Algorithm.hpp  BTree.hpp  BigInteger.h  Graph.hpp  Heap.hpp  Kmp.hpp  LearnKit.hpp  List.h  Matrix.hpp  Poly.hpp  Random.hpp  Redirect.h  SAM.hpp  SegmentTree.hpp  SuffixArray.hpp  Trie.hpp  UnionFindSet.hpp  Version.h  Version.inc.in  WNQueue.h  fast_stdio.hpp  fft.hpp  hash.hpp  prime.hpp  sort.hpp  type.hpp  wrap_array.hpp
include/Nitetrichor/Simulation/: Simulation.h  def.h
include/rapidxml/: manual.html  rapidxml_ext.hpp
lib/: CMakeLists.txt
lib/Core/: Basic.c  CMakeLists.txt  Log.cpp  Notification.cpp  UUID.cpp
lib/LearnKit/: BTree.cpp  CMakeLists.txt  Kmp.cpp  Redirect.cpp  Version.c  WNQueue.c  learn.cpp
lib/Simulation/: CMakeLists.txt  __init.cpp
test/: CMakeLists.txt  test.cpp
test/googletest/: CONTRIBUTING.md  README.md
test/googletest/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_for_dummies.md  index.md  platforms.md  primer.md  quickstart-bazel.md  samples.md
test/googletest/docs/reference/: actions.md  assertions.md  matchers.md  mocking.md  testing.md
tools/: CMakeLists.txt
tools/Learn/: CMakeLists.txt  insn.c  insn.h  main.c  static_key.c  temp.c
tools/Learn++/: CMakeLists.txt  exam.hpp  main.cpp  temp.cpp  temp.hpp
tools/Nitetrichor/: CMakeLists.txt  main.cpp
tools/RanGen/: CMakeLists.txt  main.cpp
tools/other/: CMakeLists.txt  main.cpp  main.m  temp.cpp
tools/other2/: CMakeLists.txt  main.c  main.cpp
